--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                     </div>
                          
                     <div class="col-md-8 col-sm-7 text-align-right">
-                         <span class="phone-icon"> <i>Contact US: </i> <a href="tel:8148120267"> 717-823-7617</a></span>
+                         <span class="phone-icon"> <i>Contact US: </i> <a href="tel:7178237617"> 717-823-7617</a></span>
                          <span class="date-icon"><i class="fa fa-calendar-plus-o"></i> 8:00 AM - 8:00 PM (Mon-Sat)</span>
-                        <!-- <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="StellarLandscapingAndServices@gmail.com">StellarLandscapingAndServices@gmail.com</a></span>-->
+                        <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="mailto:SVFlooringService@gmail.com"> SVFlooringService@gmail.com</a></span>
                     </div>
 
                </div>
@@ -597,8 +597,8 @@
                             
 
                               <div class="contact-info">
-                                   <p><i class="fa fa-phone"></i> <a href="tel:8148120267"> 717-823-7617</a></p>
-                                   <p><i class="fa fa-envelope-o"></i> <a href="mailto:stellarlandscapingservices@gmail.com"> SVFlooringService@gmail.com</a></p>
+                                   <p><i class="fa fa-phone"></i> <a href="tel:7178237617"> 717-823-7617</a></p>
+                                   <p><i class="fa fa-envelope-o"></i> <a href="mailto:SVFlooringService@gmail.com"> SVFlooringService@gmail.com</a></p>
                               </div>
                          </div>
                     </div>
