--- a/index.html
+++ b/index.html
@@ -561,11 +561,9 @@
                                    <div class="col-md-12 col-sm-12">
                                         <label for="select">Select Service</label>
                                         <select class="form-control">
-                                             <option>Interior Finishing</option>
-                                             <option>Exterior Finishing</option>
-                                             <option>Landscape Design</option>
-                                             <option>Landscping</option>
-                                             <option>Hardscaping</option>
+                                             <option>Residential Flooring</option>
+                                             <option>Commercial Flooring</option>
+                                             <option>Floor Repair</option>
                                         </select>
                                    </div>
 
