--- a/index.html
+++ b/index.html
@@ -170,6 +170,14 @@
                                         <p>Flooring Specialist</p>
                                    </figcaption>
                               </figure>
+
+                              <figure class="profile wow fadeInUp" data-wow-delay="1s">
+                                   <img src="images/Author-2-img.png" class="img-responsive" alt="">
+                                   <figcaption>
+                                        <h3>Sergey Varlamov Jr</h3>
+                                        <p>Flooring Specialist</p>
+                                   </figcaption>
+                              </figure>
                          </div>
                          
                     </div>
