--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                               </figure>
 
                               <figure class="profile wow fadeInUp" data-wow-delay="1s">
-                                   <img src="images/Author-2-img.png" class="img-responsive" alt="">
+                                   <img src="images/author-image.jpg" class="img-responsive" alt="">
                                    <figcaption>
                                         <h3>Sergey Varlamov Jr</h3>
                                         <p>Flooring Specialist</p>
