--- a/index.html
+++ b/index.html
@@ -160,24 +160,17 @@
                                    <img src="images/Author-2-img.png" class="img-responsive" alt="">
                                    <figcaption>
                                         <h3>Artem Varlamov</h3>
-                                        <p>Tile Specialist</p>
+                                        <p>Tile Installer</p>
                                    </figcaption>
                               </figure>
                               <figure class="profile wow fadeInUp" data-wow-delay="1s">
                                    <img src="images/Author-2-img.png" class="img-responsive" alt="">
                                    <figcaption>
                                         <h3>Alex Varlamov</h3>
-                                        <p>Flooring Specialist</p>
+                                        <p>Flooring Installer</p>
                                    </figcaption>
                               </figure>
 
-                              <figure class="profile wow fadeInUp" data-wow-delay="1s">
-                                   <img src="images/author-image.jpg" class="img-responsive" alt="">
-                                   <figcaption>
-                                        <h3>Sergey Varlamov Jr</h3>
-                                        <p>Flooring Specialist</p>
-                                   </figcaption>
-                              </figure>
                          </div>
                          
                     </div>
