--- a/index.html
+++ b/index.html
@@ -144,32 +144,12 @@
                          <div class="about-info">
                               <h2 class="wow fadeInUp" data-wow-delay="0.6s">About Us</h2>
                               <div class="wow fadeInUp" data-wow-delay="0.8s">
-                                   <p>SV Flooring was founded eight years ago by Sergey Varlamov. Who began working on small renovation projects through out the South Eastern Pennsylvania Region. Since then,
+                                   <p>SV Flooring was founded eight years ago in the South Eastern Pennsylvania Region. Since then,
                                     SV Flooring has grown steadily; involving work with many projects and tradesman through out the United States.</p>
                                    <p>Our strong work ethic represents the center of SV Flooring culture, and with the company’s commitment to customer satisfaction, it can
                                     be credited to its continuing success today. </p>
                               </div>
-                              <figure class="profile wow fadeInUp" data-wow-delay="1s">
-                                   <img src="images/author-image.jpg" class="img-responsive" alt="">
-                                   <figcaption>
-                                        <h3>Sergey Varlamov</h3>
-                                        <p>Owner/Manager</p>
-                                   </figcaption>
-                              </figure>
-                              <figure class="profile wow fadeInUp" data-wow-delay="1s">
-                                   <img src="images/Author-2-img.png" class="img-responsive" alt="">
-                                   <figcaption>
-                                        <h3>Artem Varlamov</h3>
-                                        <p>Tile Installer</p>
-                                   </figcaption>
-                              </figure>
-                              <figure class="profile wow fadeInUp" data-wow-delay="1s">
-                                   <img src="images/Author-2-img.png" class="img-responsive" alt="">
-                                   <figcaption>
-                                        <h3>Alex Varlamov</h3>
-                                        <p>Flooring Installer</p>
-                                   </figcaption>
-                              </figure>
+                             
 
                          </div>
                          
